updated alignment fix to support both FF and Chrome

--- a/Styles/_nav.scss
+++ b/Styles/_nav.scss
@@ -119,7 +119,8 @@ nav {
         padding: 0.5em;
         box-sizing: border-box;
         transition: transform ease-in-out .3s;
-        display: table;
+        display: grid;
+        align-items: center;
 
         &:first-child {
             z-index: 1;
@@ -136,11 +137,6 @@ nav {
             a {
                 color: $PrimaryBackground;
             }
-        }
-
-        .nav-link {
-            vertical-align: middle;
-            display: table-cell;
         }
     }
 
